--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -8,4 +8,4 @@ keywords: regex
 
 正则表达式用途广泛，在字符串匹配上功不可没，上学时候学了都忘了，只好操笔记下。在学习正则表达式的过程中少不了神器[Regex Tester](http://deerchao.net/tools/regex_tester/regextester.zip),边学边练习。
 
-# 元字符
+### 元字符
