--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -12,7 +12,7 @@ keywords: regex
 
 正则表达式中常用几种元字符
 
-<table>
+<table class="table table-bordered table-striped">
     <tr>
         <td>Foo</td>
         <td>Baa</td>
