--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -13,8 +13,12 @@ keywords: regex
 正则表达式中常用几种元字符
 
 <table class="table table-bordered table-striped">
-    <tr>
-        <td>Foo</td>
-        <td>Baa</td>
-    </tr>
+    <tr><td>元字符</td><td>说明</td></tr>
+    <tr><td>.</td><td>匹配除换行符以外的所有字符</td></tr>
+    <tr><td>\w</td><td>匹配字母、数字、下划线、汉字</td></tr>
+    <tr><td>\s</td><td>匹配任意空白符</td></tr>
+    <tr><td>\d</td><td>匹配数字</td></tr>
+    <tr><td>\b</td><td>匹配单词的开始或者结束</td></tr>
+    <tr><td>^</td><td>匹配字符串的开始</td></tr>
+    <tr><td>$</td><td>匹配字符串的结束</td></tr>
 </table>
