--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -22,3 +22,17 @@ keywords: regex
     <tr><td>^</td><td>匹配字符串的开始</td></tr>
     <tr><td>$</td><td>匹配字符串的结束</td></tr>
 </table>
+
+在查找元字符本身的时候需要字符转义，例如查找.或者*或者\，需要加上转义字符\，即正则表达式：\*，\*，\\。如果要正确匹配5位到8位的QQ号码，可以写成\d{5,8}，匹配过程中需要用到数量的限定，正则表达式中常用的数量限定如下:
+
+<table class="table table-bordered table-striped">
+    <tr><td>代码</td><td>说明</td></tr>
+    <tr><td>*</td><td>重复0次到很多次</td></tr>
+    <tr><td>+</td><td>重复一次到很多次</td></tr>
+    <tr><td>？</td><td>重复0次或者1次</td></tr>
+    <tr><td>{n}</td><td>重复n次</td></tr>
+    <tr><td>{n,m}</td><td>重复n次到m次</td></tr>
+    <tr><td>{n,}td><td>重复n次到很多次</td></tr>
+</table>
+
+比如要匹配一个电话号码，有下面三种格式：(010)66666666、010666666、010-666666。可以预见开头要么出现(要么不出现，可以这样判断\(?0\d{2}[)-]?\d{8}，可以匹配出以上三种情形，但是如果号码是这样:(01099999999或者这样010)99999999也匹配成功了就显然有问题，这时需要加入分支判断|
