--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -23,7 +23,7 @@ keywords: regex
     <tr><td>$</td><td>匹配字符串的结束</td></tr>
 </table>
 
-在查找元字符本身的时候需要字符转义，例如查找`.`或者`*`或者`\`，需要加上转义字符`\`，即正则表达式：`\*`，`\*`，`\\`。如果要正确匹配5位到8位的QQ号码，可以写成`\d{5,8}`，匹配过程中需要用到数量的限定，正则表达式中常用的数量限定如下:
+在查找元字符本身的时候需要字符转义，例如查找`.`或者`*`或者`\`，需要加上转义字符`\`，即正则表达式：`\*`，`\*`，`\\`。如果要正确匹配5位到8位的QQ号码，可以写成`\d{5,8}`，匹配过程中需要用到数量的限定，正则表达式中常用的数量限定如下：
 
 <table class="table table-bordered table-striped">
     <tr><td>代码</td><td>说明</td></tr>
