--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -32,7 +32,7 @@ keywords: regex
     <tr><td>？</td><td>重复0次或者1次</td></tr>
     <tr><td>{n}</td><td>重复n次</td></tr>
     <tr><td>{n,m}</td><td>重复n次到m次</td></tr>
-    <tr><td>{n,}td><td>重复n次到很多次</td></tr>
+    <tr><td>{n,}</td><td>重复n次到很多次</td></tr>
 </table>
 
 比如要匹配一个电话号码，有下面三种格式：(010)66666666、010666666、010-666666。可以预见开头要么出现(要么不出现，可以这样判断\(?0\d{2}[)-]?\d{8}，可以匹配出以上三种情形，但是如果号码是这样:(01099999999或者这样010)99999999也匹配成功了就显然有问题，这时需要加入分支判断|
