--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -35,4 +35,4 @@ keywords: regex
     <tr><td>{n,}</td><td>重复n次到很多次</td></tr>
 </table>
 
-比如要匹配一个电话号码，有下面三种格式：(010)66666666、010666666、010-666666。可以预见开头要么出现(要么不出现，可以这样判断\(?0\d{2}[)-]?\d{8}，可以匹配出以上三种情形，但是如果号码是这样:(01099999999或者这样010)99999999也匹配成功了就显然有问题，这时需要加入分支判断|
+比如要匹配一个电话号码，有下面三种格式：(010)66666666、010666666、010-666666。可以预见开头要么出现(要么不出现，可以这样判断`\(?0\d{2}[)-]?\d{8}`，可以匹配出以上三种情形，但是如果号码是这样:(01099999999或者这样010)99999999也匹配成功了就显然有问题，这时需要加入分支判断`|`，因为刚才没有判断`(`与`)`是成对出现的，可以这样`^0\d{2}[-]?\d{8}|\(0\d{2}\)\d{8}`，一定要注意加上`^`从字符串开头匹配，不然出现(010666666的时候，检测到(后面的内容也会匹配成功。*在进行分支判断的时候要注意分支条件的顺序*，因为`|`这个符号就跟逻辑表达式的`||`类似，从左到右判断，只要一个满足就返回了true。
