--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -44,3 +44,12 @@ keywords: regex
 	^0\d{2}[-]?\d{8}|\(0\d{2}\)\d{8}
 
 一定要注意加上`^`从字符串开头匹配，不然出现(010666666的时候，检测到(后面的内容也会匹配成功。**在进行分支判断的时候要注意分支条件的顺序**，因为`|`这个符号就跟逻辑表达式的`||`类似，从左到右判断，只要一个满足就返回了true。
+
+### 分组
+
+我们要重复单个字符好办，用上面提供的重复限制就可以搞定，但是如果要重复的是一个字符串呢？这时候需要用到分组。简单的一个IP地址192.168.1.1，这个地址分为四段，前三段都是一样，一组一位到三位的数字加一个`.组成`即`\d{1,3}\.`，最后一组是`\d{1,3}`，所以关于IP地址的正则表达式可以简单的写成、
+
+	(\d{1,3}\.){3}\d{1,3}
+
+`{3}`表示把前面括号的重复三次。但是IP地址每一级的范围是0-255,所以上面那样判断是有问题的，但是正则表达式不能数学计算，所以只好用分支判断分情况考虑，如下：
+	
