--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -52,4 +52,36 @@ keywords: regex
 	(\d{1,3}\.){3}\d{1,3}
 
 `{3}`表示把前面括号的重复三次。但是IP地址每一级的范围是0-255,所以上面那样判断是有问题的，但是正则表达式不能数学计算，所以只好用分支判断分情况考虑，如下：
-	
+
+	^(2[0-4]\d|25[0-5][01]?|([01]?\d\d?)\.){3}(2[0-4]\d|25[0-5][01]?|[01]?\d\d?)$
+
+这时候有一点需要注意的是`2[0-4]\d|25[0-5][01]?|([01]?\d\d?`中的`([01]?\d\d?`分支不能放在最前面，不然可能会会导致错误判断（在没有限制字符串的结束位置的时候），因为`([01]?\d\d?`的作用是判断一位两位数的情况和三位数但是是0或者1开头的情况，如果放最前面就会造成如果,192.168.1.248，最后匹配到的结果是192.168.1.24，这显然是不和条件的。所以分支判断位置很重要。
+
+### 反义
+
+顾名思义，反义的意思就是匹配所给规则之外的字符。关于反义元字符的有下面几种：
+
+<table class="table table-bordered table-striped">
+    <tr><td>字符</td><td>说明</td></tr>
+    <tr><td>\W</td><td>匹配任意不是字母数字下划线汉字的字符</td></tr>
+    <tr><td>\S</td><td>匹配任意不是空白符的字符</td></tr>
+    <tr><td>\D</td><td>匹配任意不是数字的字符</td></tr>
+    <tr><td>\B</td><td>匹配任意不是单词开头或者结束的位置</td></tr>
+    <tr><td>{^m}</td><td>匹配除了m之外的任意字符</td></tr>
+    <tr><td>{^mnp}</td><td>匹配除了不是mnp这几个字符以外的任意字符</td></tr>
+</table>
+
+### 后向引用
+
+使用情形：找出所有重复单词。
+使用小括号指定一个子表达式作为一个分组，在后面程序中可以引用这个子表达式匹配，默认的每一组子表达式会有一个编号从1开始。比如要匹配重复单词hello hello，可以这样写正则表达式
+
+	\b(\w+)\b\s+\1\b  
+
+又如要找出首尾以hellp结束的字符串：
+
+	\b(\w+)\b\s+(\w+\s+)*(\1\b)
+
+上面`\1`就表示的是第一个分组。关于组名可以自己指定，需要使用这样的语法：`(?<name>\w+)`,反向捕获的时候使用`\k<name>`，所以上面的例子可以换成
+
+	\b(?<name>\w+)\b\s+(\w+\s+)*(\k<name>\b)
