--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -78,10 +78,21 @@ keywords: regex
 
 	\b(\w+)\b\s+\1\b  
 
-又如要找出首尾以hellp结束的字符串：
+又如要找出以hello开始并且以hello结束的字符串：
 
 	\b(\w+)\b\s+(\w+\s+)*(\1\b)
 
 上面`\1`就表示的是第一个分组。关于组名可以自己指定，需要使用这样的语法：`(?<name>\w+)`,反向捕获的时候使用`\k<name>`，所以上面的例子可以换成
 
 	\b(?<name>\w+)\b\s+(\w+\s+)*(\k<name>\b)
+
+### 零宽断言
+
+举个例子，在`i am laughing while you are crying`中找出以`ing`结尾的单词。如果不知道断言这回事可以写`\b\w+(ing\b)`来找出带`ing`的单词，但是现在是要找出ing之前的部分，这时候就需要断言的帮助了。
+
+<table class="table table-bordered table-striped">
+    <tr><td>(?=word)</td><td>匹配word之前的位置</td></tr>
+    <tr><td>(?&lt=word)</td><td>匹配word之后的位置</td></tr>
+    <tr><td>(?!word)</td><td>匹配后面跟的不是word的位置</td></tr>
+    <tr><td>(?!<word)</td><td>匹配前面跟的不是word的位置</td></tr>
+</table>
