--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -94,5 +94,5 @@ keywords: regex
     <tr><td>(?=word)</td><td>匹配word之前的位置</td></tr>
     <tr><td>(?&lt=word)</td><td>匹配word之后的位置</td></tr>
     <tr><td>(?!word)</td><td>匹配后面跟的不是word的位置</td></tr>
-    <tr><td>(?!<word)</td><td>匹配前面跟的不是word的位置</td></tr>
+    <tr><td>(?!&ltword)</td><td>匹配前面跟的不是word的位置</td></tr>
 </table>
