--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -96,3 +96,8 @@ keywords: regex
     <tr><td>(?!word)</td><td>匹配后面跟的不是word的位置</td></tr>
     <tr><td>(?!&ltword)</td><td>匹配前面跟的不是word的位置</td></tr>
 </table>
+
+接着上例，我们可以找出以`ing`结尾的单词用`\b\w+(?=ing\b)`，结果是`laugh`,`cry`。再如要找出`la`所在单词之后的部分：`(?<=\bsm)\w+\b`,得到`ughing`。
+**断言：正则表达式中的断言只是用来申明一个为真的事实，只有断言为真的时候才执行后面的匹配**。
+
+### 负向零宽断言
