--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -105,7 +105,7 @@ keywords: regex
 `(?!word)`,断言此位置后面不能匹配表达式`word`,例如`\b((?!abc)\w)+\b`，匹配不包含连续字符串`abc`的字符串。于是同理，`(?<!word)`用来断言此位置前面不能匹配表达式`word`，`(?<![a-z])\d[7]`表示匹配一个开头不是小写字母的七位数字，如`S3456789`得到`3456789`.
 在做网页内容抓取的时候经常会抓取一段HTML标签内的内容比如：
 
-	&ltb> this is a demo&lt/b>
+	<b> this is a demo</b>
 
 我们要获取`this is a demo`，用零宽断言就可以解决。
 
