--- a/_posts/shell/2013-03-02-Awk.md
+++ b/_posts/shell/2013-03-02-Awk.md
@@ -5,3 +5,5 @@ category: shell
 tags: [shell, sed, awk]
 keywords: shell, sed, awk
 ---
+
+上一篇[传送门](http://gayyzxyx.github.com/shell/2013/02/24/Sed-And-Awk/)
