--- a/_posts/shell/2013-03-02-Awk.md
+++ b/_posts/shell/2013-03-02-Awk.md
@@ -7,3 +7,26 @@ keywords: shell, sed, awk
 ---
 
 上一篇[传送门](http://gayyzxyx.github.com/shell/2013/02/24/Sed-And-Awk/)
+
+## 概述：
+awk功能与sed相似，都是处理文本的工具，但是awk的强大之处在于借助强大的语法支持处理格式化的文本，在处理没有规律的文本上面不及sed方便，术业有专攻吧。
+
+## awk编程模型:
+
+awk不能看作是一个shell命令了，更应该是一门编程语言。awk程序由一个主输入循环维持，其反复执行直到终止条件被触发。幸运的是awk的主循环框架无需我们去编写，已经搭建好了，我们只需要将写好的代码嵌入到循环框架中执行。awk有两个特殊的字段：BEGIN和END，BEGIN在主输入循环之前执行，即在未读取输入文件之前执行，END则恰好相反。总体看，awk程序的执行分为三个阶段：读输入文件之前的执行代码段（由BEGIN关键字标识）、读取输入文件时的执行代码段、读取输入文件之后的执行代码段（由END关键字标志）。
+
+## awk的调用方法：
+调用awk的方法与调用sed类似，也有三种方式：
+
+### 1.在shell命令行输入命令调用awk，格式为：
+	
+	awk [-F 域分隔符] 'awk程序段' 输入文件   #需要用单引号将awk程序段引起来
+
+### 2.将awk程序段插入脚本文件，然后通过awk命令调用它，格式为：
+
+	awk -f awk脚本文件 输入文件     #同sed命令类似也是通过-f选项表示调用脚本文件
+
+### 3.将sed命令插入脚本文件之后，最常用的方法是设置改脚本可执行，然后直接直接执行该脚本文件，格式为：
+
+	./awk脚本文件 输入文件     #同样以#/awk路径来开头
+
