--- a/_posts/shell/2013-03-02-Awk.md
+++ b/_posts/shell/2013-03-02-Awk.md
@@ -18,7 +18,7 @@ awk不能看作是一个shell命令了，更应该是一门编程语言。awk程
 ## awk的调用方法：
 调用awk的方法与调用sed类似，也有三种方式：
 
-1.在shell命令行输入命令调用awk，格式为	
+在shell命令行输入命令调用awk，格式为	
 
 	awk [-F 域分隔符] 'awk程序段' 输入文件   #需要用单引号将awk程序段引起来
 
