--- a/_posts/shell/2013-03-02-Awk.md
+++ b/_posts/shell/2013-03-02-Awk.md
@@ -30,3 +30,106 @@ awk不能看作是一个shell命令了，更应该是一门编程语言。awk程
 
 	./awk脚本文件 输入文件     #同样以#/awk路径来开头
 
+### 1\.awk模式匹配
+
+任何awk语句都是由模式(pattern)和动作(action)构成，模式测试输入行是否需要执行动作的规则(决定动作何时触发和触发事件)，动作是包含语句、函数和表达式的执行过程(执行对输入行的处理)，awk不仅支持所有正则表达式的元字符还支持"?"和"+"两个扩展元字符，而grep和sed并不支持，看awk的三种调用方法。
+
+	root@core /home/awk# awk '/^$/{print "this is a blank line."}' input    #方法一调用awk打印空白行
+	this is a blank line.
+	this is a blank line.
+	this is a blank line.
+
+	root@core /home/awk# cat > scr.awk   #创建scr.awk，执行命令
+	/^$/{print "this is a blank line."}
+	root@core /home/awk# awk -f scr.awk input   #方法二调用awk打印空白行
+	this is a blank line.
+	this is a blank line.
+	this is a blank line.
+
+	root@core /home/awk# cat  scr1.awk      #创建脚本
+	#!/usr/bin/awk -f
+	/^$/{print "this is a blank line."}
+	root@core /home/awk# chmod u+x scr1.awk    #赋予可执行权限
+	root@core /home/awk# ./scr1.awk input     #方法三调用awk打印空白行
+	this is a blank line.
+	this is a blank line.
+	this is a blank line.
+
+### 2\.记录和域
+
+awk认为输入文件是结构化的，将每个输入行定义为记录，行中每一个字符串定义为域，域之间用空格、tab键或者其他符号进行分割。awk定义$来指定执行动作的域，如$1表示第一个域，$2表示第二个，$0则表示所有的域。有一个stu记录了学生信息，有四个域，分别用空格、tab、tab隔开如下：
+
+	root@core /home/awk# awk '{print $2,$1,$3,$4}' stu   #依次打印第二个。第一个、第三个、第四个域
+	Hao Li njue 025-83481010
+	Ju Zhang nju 025-83466534
+	Bin Wang seu 025-83494883
+	Lin Zhu njupt 025-83680010
+
+	root@core /home/awk# awk '{print $0}' stu         #$0表示打印所有域
+	Li Hao  njue    025-83481010
+	Zhang Ju        nju     025-83466534
+	Wang Bin        seu     025-83494883
+	Zhu Lin njupt   025-83680010
+
+域操作符后面可以跟变量或者运算表达式，如下：
+
+	root@core /home/awk# awk 'BEGIN {one=1;two=2}{print $(one+two)}' stu   #打印第三个域
+	njue
+	nju
+	seu
+	njupt
+
+可以用awk的`-F`选项来改变分隔符，awk的默认设置的分隔符是空格键，而tab键是被当做连续的空格符来处理。
+
+	root@core /home/awk# awk -F"\t" '{print $3}' stu    #此时的第三个域则是电话号码那列
+	025-83481010
+	025-83466534
+	025-83494883
+	025-83680010
+
+awk还可以有另外一种方式来改变分隔符，那就是awk的环境变量FS，通过在BEGIN字段中设置FS值来改变分隔符。将stu记录中的tab制表符换成逗号
+
+	root@core /home/awk# sed 's/\t/,/g' stu > stu1
+	root@core /home/awk# mv stu1 stu
+	root@core /home/awk# awk 'BEGIN{FS=","}{print $0}' stu              #打印替换后的结果
+	Li Hao,njue,025-83481010
+	Zhang Ju,nju,025-83466534
+	Wang Bin,seu,025-83494883
+	Zhu Lin,njupt,025-83680010
+
+另外，可以利用正则表达式将分隔符设置为多个字符，如下:
+(1)FS="\t"
+(2)FS="\t+"
+对于记录 wza\t\tcq，第一种将会把该记录解析为三个域：wza、空域、cq，第二种将其解析为两个域：wza和cq
+
+### 3\.关系和布尔运算符
+
+awk定义了一组关系运算符用于awk模式匹配，如下表：
+
+<table class="table table-bordered table-striped">
+    <tr><td>运算符</td><td>意义</td></tr>
+    <tr><td><</td><td>小于</td></tr>
+    <tr><td>></td><td>大于</td></tr>
+    <tr><td><=</td><td>小于等于</td></tr>
+    <tr><td>>=</td><td>大于等于</td></tr>
+    <tr><td>==</td><td>等于</td></tr>
+    <tr><td>!=</td><td>不等于</td></tr>
+    <tr><td>~</td><td>匹配正则表达式</td></tr>
+    <tr><td>!~</td><td>不匹配正则表达式</td></tr>
+</table>
+
+在/etc/passwd文件中存放了用户关键信息，以这个文件作为输入文件：
+
+	root@core /home/awk# awk 'BEGIN {FS=":"} $1~/root/' /etc/passwd   #在第一个域中找出包含root关键字的记录
+	root:x:0:0:root:/root:/bin/bash
+
+awk在进行匹配的时候，常常使用到条件语句，awk的条件语句跟C语言的类似，有if、if/else、if/else else语句，如要匹配第三个域小于第四个的记录：
+
+	root@core /home/awk# awk 'BEGIN{FS=":"}{if($3<$4)print $0}' /etc/passwd
+	sync:x:4:65534:sync:/bin:/bin/sync
+	games:x:5:60:games:/usr/games:/bin/sh
+	man:x:6:12:man:/var/cache/man:/bin/sh
+	libuuid:x:100:101::/var/lib/libuuid:/bin/sh
+	ntp:x:101:103::/home/ntp:/bin/false
+	sshd:x:102:65534::/var/run/sshd:/usr/sbin/nologin
+	shellinabox:x:103:105:Shell In A Box,,,:/var/lib/shellinabox:/bin/false
