--- a/_posts/shell/2013-03-02-Awk.md
+++ b/_posts/shell/2013-03-02-Awk.md
@@ -109,9 +109,9 @@ awk定义了一组关系运算符用于awk模式匹配，如下表：
 <table class="table table-bordered table-striped">
     <tr><td>运算符</td><td>意义</td></tr>
     <tr><td>\<</td><td>小于</td></tr>
-    <tr><td>></td><td>大于</td></tr>
+    <tr><td>\></td><td>大于</td></tr>
     <tr><td>\<=</td><td>小于等于</td></tr>
-    <tr><td>>=</td><td>大于等于</td></tr>
+    <tr><td>\>=</td><td>大于等于</td></tr>
     <tr><td>==</td><td>等于</td></tr>
     <tr><td>!=</td><td>不等于</td></tr>
     <tr><td>~</td><td>匹配正则表达式</td></tr>
