--- a/_posts/shell/2013-03-02-Awk.md
+++ b/_posts/shell/2013-03-02-Awk.md
@@ -112,10 +112,10 @@ awk定义了一组关系运算符用于awk模式匹配，如下表：
     <tr><td>\></td><td>大于</td></tr>
     <tr><td>\<=</td><td>小于等于</td></tr>
     <tr><td>\>=</td><td>大于等于</td></tr>
-    <tr><td>==</td><td>等于</td></tr>
-    <tr><td>!=</td><td>不等于</td></tr>
-    <tr><td>~</td><td>匹配正则表达式</td></tr>
-    <tr><td>!~</td><td>不匹配正则表达式</td></tr>
+    <tr><td>\==</td><td>等于</td></tr>
+    <tr><td>\!=</td><td>不等于</td></tr>
+    <tr><td>\~</td><td>匹配正则表达式</td></tr>
+    <tr><td>\!~</td><td>不匹配正则表达式</td></tr>
 </table>
 
 在/etc/passwd文件中存放了用户关键信息，以这个文件作为输入文件：
