--- a/_posts/shell/2013-03-02-Awk.md
+++ b/_posts/shell/2013-03-02-Awk.md
@@ -287,3 +287,27 @@ gsub函数提供字符串的替换功能，gsub的第一种形式作用于全部
 	gridsphere x 0 0 root /root /bin/bash
 	root@core /home/awk# awk 'BEGIN {FS=":"} gsub(/root/,"gridsphere") {print $0}' /etc/passwd    #替换全部域上的root字符串
 	gridsphere:x:0:0:gridsphere:/gridsphere:/bin/bash
+
+index函数返回第二个字符串在第一个字符串中出现的首位置，length函数返回字符串的长度：
+
+	root@core /home/awk# awk 'BEGIN{print index("gayyzxyx","yx")}'
+	7
+	root@core /home/awk# awk 'BEGIN {print length("gayyzxyx")}'
+	8
+
+match(s,t)测试s是否包含匹配t的字符串，t可以是一个正则表达式，若匹配成功就返回t的首位置，否则返回0,如下：
+
+	root@core /home/awk# awk 'BEGIN{print match("gAyyzxyx",/A/)}'
+	2
+
+sub(r,s,t)只替换模式出现的第一个位置，如下：
+
+	root@core /home/awk# awk 'BEGIN{str="multiprocessor programming";sub(/pro/,"PRO",str);printf("%s\n",str)}'   #只有第一个pro被替换了
+	multiPROcessor programming
+
+substr返回字符串的指定后缀，如下：
+
+	root@core /home/awk# awk 'BEGIN{str="multiprocessor programming";print substr(str,6)}'
+	processor programming
+	root@core /home/awk# awk 'BEGIN{str="multiprocessor programming";print substr(str,6,9)}'   #第6个位置开始，长度为9
+	processor
