--- a/_posts/shell/2013-03-02-Awk.md
+++ b/_posts/shell/2013-03-02-Awk.md
@@ -311,3 +311,153 @@ substr返回字符串的指定后缀，如下：
 	processor programming
 	root@core /home/awk# awk 'BEGIN{str="multiprocessor programming";print substr(str,6,9)}'   #第6个位置开始，长度为9
 	processor
+
+### 8\.向AWK脚本传递参数
+
+awk脚本内的变量可以在命令行中进行赋值，实现向awk脚本传递参数，格式为：
+
+	awk脚本 parameter=value 输入文件
+
+参数可以是自定义的变量，也可以是系统变量。如下：
+
+	root@core /home/awk# cat pass.awk                       	#判断记录的域数量是否等于MAX数量，如果不等于则输出包含NR和MAX两个变量的文本行
+	#!/usr/bin/awk -f
+	NF!=MAX
+	{print("the line "NR" does  not have "MAX" filds")}
+	root@core /home/awk# ./pass.awk MAX=3 FS="," stu
+	Li Hao,njue,025-83481010,85,92,78,94,88
+	the line 1 does  not have 3 filds
+	Zhang Ju,nju,025-83466534,89,90,75,90,86
+	the line 2 does  not have 3 filds
+	Wang Bin,seu,025-83494883,84,88,80,92,84
+	the line 3 does  not have 3 filds
+	Zhu Lin,njupt,025-83680010,98,78,81,87,76
+	the line 4 does  not have 3 filds
+
+以下是输出stu的所有记录，每条记录加上行号(即NR变量值),然后重新定义OFS值，改变域的分隔符，即NR和$0之间用OFS定义的值分割
+
+	root@core /home/awk# awk 'BEGIN{FS=","} {print(NR,$0)}' OFS="." stu
+	1.Li Hao,njue,025-83481010,85,92,78,94,88
+	2.Zhang Ju,nju,025-83466534,89,90,75,90,86
+	3.Wang Bin,seu,025-83494883,84,88,80,92,84
+	4.Zhu Lin,njupt,025-83680010,98,78,81,87,76
+
+需要注意的是，命令行参数不能被BEGIN字段语句访问，换句话说，直到输入文件的第一行被读取时，命令行参数才生效，如下。
+
+	root@core /home/awk# awk '
+	> BEGIN {print n}
+
+### 9\.条件语句和循环语句
+
+awk的条件语句和循环语句的语法跟C语言的完全一样，有如下形式：
+
+	if (条件表达式)
+		动作1
+	else
+		动作2
+
+	if(x==y) print x
+	if(x~/正则表达式/) print x
+	#也可以while或者do{}while
+	while(条件表达式)
+		动作
+	#还可以for循环
+	for(初值，计数器，计数器变化)
+		动作
+
+### 10\.数组
+
+awk的数组的形式跟C语言的一样，但是awk数组无需定义数组类型和大小，可以直接赋值使用，基本格式为:
+	
+	array[index]=value
+
+1\.关联数组
+
+关联数组的意思是数组的索引既可以是字符串也可以是数字。在大部分编程语言中数组的索引只能是数字，而awk的不是这样。安维卡的所有数组都是关联数组，这是awk数组和其他大部分编程语言的数组的区别。
+
+	root@core /home/awk# awk 'BEGIN{data[10.15]="1200";CONVFMT="%d";printf("<%s>",ta[10.15])}'   #字符串和数字是严格区分的
+	<>
+
+awk定义了一种特别的for循环来访问关联数组，array是定义的数组名，variable是任意指定的变量，
+
+	for(variable in array)
+		do something with array[variable]
+
+关键字in也可以用在条件表达式中判断元素是否在数组中，如下：
+
+	index in array
+
+如果array[index]存在，返回1，否则返回0,如下
+
+	root@core /home/awk# awk 'BEGIN{data[10.15]="1200";if("10.15" in data) print "found element!"}'
+	found element!
+
+2\.split函数
+
+split函数的返回值是数组的大小，如下：
+
+	root@core /home/awk# awk 'BEGIN{print split("abc/def/xyz",str,"/")}'    #将字符串abc/def/xyz分开，并存在str中
+	3
+	root@core /home/awk# awk 'BEGIN{split("abc/def/xyz",str,"/");for(i in str) print str[i]}'  #分别打印出来如下
+	abc
+	def
+	xyz
+
+3\.数组形式的系统变量
+
+awk系统变量中有两个变量是以数组的形式提供的：`ARGV`和`ENVIRON`，ARGC是ARGV中数组中元素的个数，与C语言一样，从ARGV[0]开始到ARGV[ARGC-1]结束，如下：
+
+	root@core /home/awk# cat > argv.awk
+	BEGIN{for(x=0;x<ARGC;x++)
+	print ARGV[x]
+	print ARGC
+	}
+	root@core /home/awk# awk -f argv.awk xyz n=99 "hello world"    #xyz,n,hello world都是参数，可以看到awk[0]存的是awk,-f选项不在ARGV中，一般来说当不是执行脚本文件的时候，ARGC=2，如果没有输入文件，ARGC=1
+	awk
+	xyz
+	n=99
+	hello world
+	4
+
+如果要查找文件中内容，比如我们输入学生名字查找出学生的电话号码，可以如下：
+
+	#!/usr/bin/awk -f               #findphone.awk的脚本
+	BEGIN{FS=",";
+		if(ARGC>2){
+			#判断是否已经输入姓名
+			name=ARGV[1];
+			delete ARGV[1]}
+		else{
+				while(!name){print "please enter a name";
+				getline name< "-"}
+			}
+	}
+	$1 ~name {print $1,$3}
+	root@core /home/awk# ./findphone.awk Zhu stu
+	Zhu Lin 025-83680010
+	root@core /home/awk# ./findphone.awk stu
+	please enter a name
+	Zhu
+	Zhu Lin 025-83680010
+
+ENVIRON变量存储了LINUX系统中的环境变量，如下可以打印出系统中ENVIRON数组中所有内容：
+
+	root@core /home/awk# awk 'BEGIN {for (i in ENVIRON) print i "=" ENVIRON[i]}'
+	SSH_CLIENT=192.168.115.1 49633 22
+	EDITOR=vim
+	HOME=/root
+	PAGER=less -X -R -F
+	TERM=xterm
+	LESSOPEN=| /usr/bin/lesspipe %s
+	LANGUAGE=en_US.UTF-8
+	LC_ALL=C
+	SHELL=/bin/bash
+	OLDPWD=/root
+	USER=root
+	_=/usr/bin/awk
+	SHLVL=1
+
+ENVIRON索引的是环境变量名，因此也可以通过环境变量名得到其值：
+
+	root@core /home/awk# awk 'BEGIN{print ENVIRON["HOME"]}'
+	/root
