--- a/_posts/shell/2013-06-18-grep.md
+++ b/_posts/shell/2013-06-18-grep.md
@@ -6,9 +6,9 @@ tags: [shell]
 keywords: grep,shell
 ---
 
-Usage: grep [OPTION]... PATTERN [FILE]...Search for PATTERN in each FILE or standard input.PATTERN is, by default, a basic regular expression (BRE).Example: grep -i 'hello world' menu.h main.c
+**Usage: grep [OPTION]... PATTERN [FILE]...Search for PATTERN in each FILE or standard input.PATTERN is, by default, a basic regular expression (BRE).Example: grep -i 'hello world' menu.h main.c**
 
-1\.-A NUM 显示匹配行下的NUM行
+1\.-A NUM 显示匹配行下的NUM行:
 	
 	root@core /home/download# grep -A 1 bash download_chrome.sh
 	!bin/bash
@@ -16,7 +16,7 @@ Usage: grep [OPTION]... PATTERN [FILE]...Search for PATTERN in each FILE or stan
 
 2\.-a 搜寻二进制档案中文本
 
-3\.-B NUM 显示匹配行以上的NUM行
+3\.-B NUM 显示匹配行以上的NUM行:
 
 	root@core /home/download# grep -B 1 VERSION download_chrome.sh
 	!bin/bash
@@ -28,7 +28,7 @@ Usage: grep [OPTION]... PATTERN [FILE]...Search for PATTERN in each FILE or stan
 
 6\.-c 显示符合条件的总行数
 
-7\.-E 采用正则表达式
+7\.-E 采用正则表达式:
 
 	root@core /home/download# grep -E 'win[0-9]{2}'  download_chrome.sh
 	wget -o /home/download/chome-$VERSION http://commondatastorage.googleapis.com/chromium-browser-continuous/Win/$VERSION/chrome-win32.zip
@@ -51,7 +51,7 @@ Usage: grep [OPTION]... PATTERN [FILE]...Search for PATTERN in each FILE or stan
 
 14\.-r 递归的读出所有资料下的所有档案
 
-15\.-v 显示出了搜寻样式之外的全部
+15\.-v 显示出了搜寻样式之外的全部:
 
 	root@core /home/download# grep -v wget download_chrome.sh | grep VERSION
 	VERSION="curl http://commondatastorage.googleapis.com/chromium-browser-continuous/Win/LAST_CHANGE"
