--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -6,3 +6,41 @@ tags: [shell]
 keywords: regex
 ---
 
+正则表达式用途广泛，在字符串匹配上功不可没，上学时候学了都忘了，只好操笔记下。在学习正则表达式的过程中少不了神器[Regex Tester](http://deerchao.net/tools/regex_tester/regextester.zip),边学边练习。
+
+### 元字符
+
+正则表达式中常用几种元字符
+
+<table class="table table-bordered table-striped">
+    <tr><td>元字符</td><td>说明</td></tr>
+    <tr><td>.</td><td>匹配除换行符以外的所有字符</td></tr>
+    <tr><td>\w</td><td>匹配字母、数字、下划线、汉字</td></tr>
+    <tr><td>\s</td><td>匹配任意空白符</td></tr>
+    <tr><td>\d</td><td>匹配数字</td></tr>
+    <tr><td>\b</td><td>匹配单词的开始或者结束</td></tr>
+    <tr><td>^</td><td>匹配字符串的开始</td></tr>
+    <tr><td>$</td><td>匹配字符串的结束</td></tr>
+</table>
+
+在查找元字符本身的时候需要字符转义，例如查找`.`或者`*`或者`\`，需要加上转义字符`\`，即正则表达式：`\*`，`\*`，`\\`。如果要正确匹配5位到8位的QQ号码，可以写成`\d{5,8}`，匹配过程中需要用到数量的限定，正则表达式中常用的数量限定如下：
+
+<table class="table table-bordered table-striped">
+    <tr><td>代码</td><td>说明</td></tr>
+    <tr><td>*</td><td>重复0次到很多次</td></tr>
+    <tr><td>+</td><td>重复一次到很多次</td></tr>
+    <tr><td>？</td><td>重复0次或者1次</td></tr>
+    <tr><td>{n}</td><td>重复n次</td></tr>
+    <tr><td>{n,m}</td><td>重复n次到m次</td></tr>
+    <tr><td>{n,}</td><td>重复n次到很多次</td></tr>
+</table>
+
+比如要匹配一个电话号码，有下面三种格式：(010)66666666、010666666、010-666666。可以预见开头要么出现(要么不出现，可以这样判断
+
+    \(?0\d{2}[)-]?\d{8}
+
+，可以匹配出以上三种情形，但是如果号码是这样:(01099999999或者这样010)99999999也匹配成功了就显然有问题，这时需要加入分支判断`|`，因为刚才没有判断`(`与`)`是成对出现的，可以这样
+
+    ^0\d{2}[-]?\d{8}|\(0\d{2}\)\d{8}
+
+一定要注意加上`^`从字符串开头匹配，不然出现(010666666的时候，检测到(后面的内容也会匹配成功。**在进行分支判断的时候要注意分支条件的顺序**，因为`|`这个符号就跟逻辑表达式的`||`类似，从左到右判断，只要一个满足就返回了true。
