--- a/_posts/regex/2012-12-31-RegEx.md
+++ b/_posts/regex/2012-12-31-RegEx.md
@@ -85,3 +85,48 @@ keywords: regex
 上面`\1`就表示的是第一个分组。关于组名可以自己指定，需要使用这样的语法：`(?<name>\w+)`,反向捕获的时候使用`\k<name>`，所以上面的例子可以换成
 
     \b(?<name>\w+)\b\s+(\w+\s+)*(\k<name>\b)
+
+### 零宽断言
+
+举个例子，在`i am laughing while you are crying`中找出以`ing`结尾的单词。如果不知道断言这回事可以写`\b\w+(ing\b)`来找出带`ing`的单词，但是现在是要找出ing之前的部分，这时候就需要断言的帮助了。
+
+<table class="table table-bordered table-striped">
+    <tr><td>(?=word)</td><td>匹配word之前的位置</td></tr>
+    <tr><td>(?&lt=word)</td><td>匹配word之后的位置</td></tr>
+    <tr><td>(?!word)</td><td>匹配后面跟的不是word的位置</td></tr>
+    <tr><td>(?&lt!word)</td><td>匹配前面跟的不是word的位置</td></tr>
+</table>
+
+接着上例，我们可以找出以`ing`结尾的单词用`\b\w+(?=ing\b)`，结果是`laugh`,`cry`。再如要找出`la`所在单词之后的部分：`(?<=\bsm)\w+\b`,得到`ughing`。
+
+**断言：正则表达式中的断言只是用来申明一个为真的事实，只有断言为真的时候才执行后面的匹配**。
+
+### 负向零宽断言
+`(?!word)`,断言此位置后面不能匹配表达式`word`,例如`\b((?!abc)\w)+\b`，匹配不包含连续字符串`abc`的字符串。于是同理，`(?<!word)`用来断言此位置前面不能匹配表达式`word`，`(?<![a-z])\d[7]`表示匹配一个开头不是小写字母的七位数字，如`S3456789`得到`3456789`.
+在做网页内容抓取的时候经常会抓取一段HTML标签内的内容比如：
+
+    <b> this is a demo</b>
+
+我们要获取`this is a demo`，用零宽断言就可以解决。
+
+    (?<=<(?<name>\w+)>)[\s\S]*(?=<\/\k<name>>)
+
+其中`(?<=<>)`表示的是标签的第一个`<>`，表示匹配标签开始之后的位置，`<(?<name>\w+)>`表示的是标签名字,比如`<b>`，其中用到了后向引用，因为标签的收尾肯定是和标签头一样的。`\s\S`表示所有字符，是一个全集，`(?=<\/\k<name>>`中的`\k<name>`表示是对前面的`name`的引用，`\/`表示是对特殊字符`/`的转义。所以整个表达式的内容便是`<b></b>`之前的内容，不包含标签。
+
+**需要转义的字符：`* . ? + $ ^ [ ] ( ) { } | \ /`
+
+### 贪婪匹配与懒惰匹配
+
+给一个字符串`aababab`，表达式`a.*b`，得到的匹配结果是`aababab`，但是我们有时候只是想要一个更短的结果，让它一匹配成功就结束。最大匹配便是贪婪匹配，最小匹配便是懒惰匹配。关于懒惰限定符有如下几种：
+
+<table class="table table-bordered table-striped">
+    <tr><td>*？</td><td>重复任意次但尽可能少重复</td></tr>
+    <tr><td>+?</td><td>重复一次或者任意次但尽可能少重复</td></tr>
+    <tr><td>??</td><td>重复0次或1次，但尽可能少重复</td></tr>
+    <tr><td>{n,m}?</td><td>重复n次到m次，但尽可能少重复</td></tr>
+    <tr><td>{n,}?</td><td>重复n次到m更多次，但尽可能少重复</td></tr>
+</table>
+
+所以表达式为`a.*?b`的话，结果便是`aab`和`ab`。
+
+**2012结束了**
