--- a/_posts/shell/2013-03-02-Awk.md
+++ b/_posts/shell/2013-03-02-Awk.md
@@ -20,15 +20,15 @@ awk不能看作是一个shell命令了，更应该是一门编程语言。awk程
 
 1\.在shell命令行输入命令调用awk，格式为	
 
-	awk [-F 域分隔符] 'awk程序段' 输入文件   #需要用单引号将awk程序段引起来
+<pre>awk [-F 域分隔符] 'awk程序段' 输入文件   #需要用单引号将awk程序段引起来</pre>
 
 2\.将awk程序段插入脚本文件，然后通过awk命令调用它，格式为
 
-	awk -f awk脚本文件 输入文件     #同sed命令类似也是通过-f选项表示调用脚本文件
+<pre>awk -f awk脚本文件 输入文件     #同sed命令类似也是通过-f选项表示调用脚本文件</pre>
 
 3\.将sed命令插入脚本文件之后，最常用的方法是设置改脚本可执行，然后直接直接执行该脚本文件，格式为
 
-	./awk脚本文件 输入文件     #同样以#/awk路径来开头
+<pre>./awk脚本文件 输入文件     #同样以#/awk路径来开头</pre>
 
 ### 1\.awk模式匹配
 
@@ -148,7 +148,7 @@ sshd:x:102:65534::/var/run/sshd:/usr/sbin/nologin
 shellinabox:x:103:105:Shell In A Box,,,:/var/lib/shellinabox:/bin/false
 </pre>
 
-同C语言一样，awk也有三个逻辑运算符||、&&、！表示逻辑或与非:
+同C语言一样，awk也有三个逻辑运算符||、&amp;&amp;、！表示逻辑或与非:
 
 <pre>
 root@core /home/awk# awk 'BEGIN {FS=":"}{if($3==10||$4==10) print $0' /etc/passwd  #匹配第三域或者第四域等于10的
